<resources>
    <string name="app_name">The Pride IAS</string>
    <string name="default_notification_channel_id">cmt.Sandeep_IAS</string>
    <string name="rupee">₹</string>
    <string name="hint_permission_title">Allow permissions!</string>
    <string name="hint_please_allow_permission">Please allow the camera and location permission to the application. So that you can upload the image of damage and get accurate results.\n\n\nSetting->Permissions->Allow Camera and location permission</string>
    <string name="hint_permission_sorry">Sorry you are not allowed to process further.</string>
    <string name="hint_cancel">Cancel</string>
    <string name="hint_settings">Settings</string>
    <string name="hint_image_desc">Image</string>
    <string name="hint_image">Image</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_learn_anywhere_and_anytime">Learn <b>anywhere</b> and</string>
    <string name="anytime">anytime</string>
    <string name="txt_start_learning">Start Learning</string>
    <string name="txt_courses">COURSES</string>
    <string name="cources">Courses</string>
    <string name="txt_please_login">Please LogIn</string>
    <string name="txt_enter_your_drona_study">Enter your The Pride IAS Academy details for a personalised experience</string>
    <string name="txt_enter_your_mobile_mail_to_recover">Enter your mobile number or e-mail to recover your password</string>
    <string name="txt_enter_your_email_here">Enter your mobile or email here</string>
    <string name="txt_enter_your_email_mobile_here">Enter your email/mobile number</string>
    <string name="txt_enter_password_here">Enter password here</string>
    <string name="txt_forgot_password">Forgot Password?</string>
    <string name="txt_don_t_have_an_account">Don\'t have an account?</string>
    <string name="txt_register">Register</string>
    <string name="txt_let_s_get_started">Let\'s Get Started</string>
    <string name="txt_create_an_account_to_continue">Create an account to continue.</string>
    <string name="txt_username">Full name</string>
    <string name="txt_email">Email</string>
    <string name="txt__91_1234567890">1234567890</string>
    <string name="txt_password_at_least_8_characters">Password (at least 6 characters)</string>
    <string name="txt_continue">Continue</string>
    <string name="txt_already_have_an_account">Already have an account?</string>
    <string name="txt_login">Login</string>
    <string name="txt_please_fill_verification_code">Please fill Verification code that have been sent to your mobile phone</string>
    <string name="txt_verify_account">Verify Account</string>
    <string name="txt_didn_t_receive_a_code">Didn\'t receive a code?</string>
    <string name="txt_resend">RESEND</string>
    <string name="menu_home">Home</string>
    <string name="menu_categories">Categories</string>
    <string name="menu_online_tests">Online Tests</string>
    <string name="menu_current_affairs">Current Affairs</string>
    <string name="menu_ebook">Ebook</string>
    <string name="menu_profile">Profile</string>
    <string name="hint_search">Search</string>
    <string name="txt_see_all">See All</string>
    <string name="txt_enter_old_password">Please enter currently using password</string>
    <string name="txt_enter_password">Please enter new password</string>
    <string name="txt_enter_valid_password">Password length minimum 6 characters</string>
    <string name="txt_re_enter_password">Please enter Re-enter password</string>
    <string name="txt_password_mismatch">"Confirmation password should be same as New password"</string>
    <string name="txt_course_categories">Course Categories</string>
    <string name="txt_you_have_3_exams_today">You have 3 Exams Today</string>
    <string name="txt_hi_vihana">Hi, Vihana</string>
    <string name="txt_agricet_books">Agricet Books</string>
    <string name="txt_e_books">Notes</string>
    <string name="txt_agricet">Agricettdnbasvnasbvdnabsdvansbdvansbdvanbsvdansbdvansbvdanbsdvnasdvnasbd</string>
    <string name="text_dummy_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text</string>
    <string name="txt_subject_title">Subject Title</string>
    <string name="dummy_content">
        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. 
        It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry. 
        Lorem Ipsum has been the industrys standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum. Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry  standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry  standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum…
    </string>
    <string name="txt_14000"><strike>₹14000/-</strike></string>
    <string name="txt_12000">₹12000/-</string>
    <string name="txt_buy_now">Buy Now</string>
    <string name="txt_validity_24_months">Validity: 24 Months</string>
    <string name="txt_play">Play</string>
    <string name="txt_1_video">1. Video</string>
    <string name="txt_mocktest_title">Mocktest Title</string>
    <string name="txt_text">Test</string>
    <string name="txt_edit_profile">Edit Profile</string>
    <string name="txt_vihana">Vihana</string>
    <string name="txt_team3_thecolourmoon_com">team3@thecolourmoon.com</string>
    <string name="txt_my_course">My Course</string>
    <string name="txt_my_progress_points">Progress points</string>
    <string name="tit_my_courses">My Courses</string>
    <string name="tit_my_results">Results</string>
    <string name="txt_profile">Profile</string>
    <string name="txt_expired_date_06_dec_2021">Expired Date: 06 Dec 2021</string>
    <string name="txt_status_active">Status: Active</string>
    <string name="txt_diploma_in_agriculture">Diploma In Agriculture</string>
    <string name="tit_my_materials">My Materials</string>
    <string name="tit_my_orders">My Orders</string>
    <string name="tit_current_affairs">Current Affairs</string>
    <string name="tit_settings">Settings</string>
    <string name="tit_terms_conditions">Terms Conditions</string>
    <string name="tit_help_support">Help and Support</string>
    <string name="tit_faq">Faq</string>
    <string name="tit_about_us">About Us</string>
    <string name="tit_log_out">Logout</string>
    <string name="title_online_tests">Online Tests</string>
    <string name="tit_categories">Categories</string>
    <string name="tit_ebook">Notes</string>
    <string name="tit_current">Current Affairs</string>
    <string name="tit_notifications">Notifications</string>
    <string name="tit_review">Review Answers</string>
    <string name="tit_search">Search</string>
    <string name="tit_materials">Materials</string>
    <string name="txt_package_of_title">Package of Title Various versions have evolved over the years</string>
    <string name="txt_pay_only">Pay only</string>
    <string name="txt_validity">Validity : </string>
    <string name="txt_days"> days</string>
    <string name="txt_validity_30_days">Validity : 30 days</string>
    <string name="dummy_subject_details">Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="btn_buy_now">Buy Now</string>
    <string name="txt_choose_courses">Choose Courses</string>
    <string name="txt_pdf_view">Pdf View</string>
    <string name="txt_package_of_title_various">Package of Title Various</string>
    <string name="txt_date">Date</string>
    <string name="txt_06_nov_2021">06 Nov 2021</string>
    <string name="txt_order_id">Order Id</string>
    <string name="txt_6772023">6772023</string>
    <string name="txt_status">Status</string>
    <string name="txt_success">Success</string>
    <string name="txt_invoice">Invoice</string>
    <string name="txt_date_of_birth">Date of Birth</string>
    <string name="txt_new_password">New Password</string>
    <string name="txt_retype_password">Retype Password</string>
    <string name="txt_old_password">Old Password</string>
    <string name="tit_edit_profile">Edit Profile</string>
    <string name="txt_get_in_touch">Get in Touch</string>
    <string name="dummy_location_address">405, 4th Floor, Bharat Towers, 5th Lane, Dwaraka Nagar, Visakhapatnam, Andhra Pradesh 530016</string>
    <string name="txt_message">Message</string>
    <string name="txt_hi_frequently_asked_questions">Hi! Frequently Asked Questions</string>
    <string name="txt_top_questions">Top Questions</string>
    <string name="txt_how_do_i_find_orders">How do I Find Orders ?</string>
    <string name="txt_question">How do I Find Orders ?</string>
    <string name="txt_send_otp">Send OTP</string>
    <string name="txt_send_your_message">Send Your Message</string>
    <string name="txt_info_dronakrushibadi_com">info@theprideias.com</string>
    <string name="txt_support_dronakrushibadi_com">support@theprideias.com</string>
    <string name="txt_91_1234567890">+91 1234567890</string>
    <string name="title_material">Material</string>
    <string name="txt_choose_your_default_language">Choose your default language:</string>
    <string name="txt_various_versions_have_evolved_over_the_years_sometimes_by_accident_sometimes_on_purpose_injected_humour_and_the_like">Various versions have evolved over the years, sometimes by accident, sometimes on purpose (injected humour and the like).</string>
    <string name="txt_instructions_for_test">Instructions for Test</string>
    <string name="txt_i_ve_read_all_the_instructions_carefully">I\'ve read all the instructions carefully and abide by them.</string>
    <string name="txt_start_test">Start Test</string>
    <string name="txt_question1">Which player scored the fastest hat-trick in the Premier League?</string>
    <string name="txt_q_question_1">QUESTION 1</string>
    <string name="txt_robin_van_persie">Robin van Persie</string>
    <string name="btn_submit">Submit</string>
</resources>