<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    tools:context=".view.fragment.OnlineTestDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/hello_blank_fragment"
            app:cardBackgroundColor="@color/colorText"

            app:cardCornerRadius="15dp"
            app:cardElevation="3dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:layout_margin="15dp"
                        android:contentDescription="@string/hint_image"
                        android:src="@drawable/pride_ias_logo" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:layout_marginEnd="14dp"
                        android:text="@string/txt_package_of_title"

                        android:textAlignment="center"
                        android:textColor="@color/colorWhite"
                        app:autoSizeMaxTextSize="14sp"
                        app:autoSizeMinTextSize="12sp"
                        app:autoSizeTextType="uniform" />
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorEditTextHint" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txt_pay_only"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="24sp"
                    app:autoSizeMaxTextSize="24sp"
                    app:autoSizeMinTextSize="20sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginBottom="8dp"
                    android:text="@string/txt_12000"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    app:autoSizeMaxTextSize="40sp"
                    app:autoSizeMinTextSize="22sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginBottom="16dp"
                    android:background="#FFE400"
                    android:padding="4dp"
                    android:text="@string/txt_validity_30_days"
                    android:textAlignment="center"
                    android:textColor="@color/colorText"
                    app:autoSizeMaxTextSize="22sp"
                    app:autoSizeMinTextSize="17sp"
                    app:autoSizeTextType="uniform" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="25dp"
                    android:paddingStart="30dp"
                    android:paddingEnd="30dp"
                    android:text="@string/dummy_subject_details"
                    android:textAlignment="center"
                    android:textColor="@color/colorWhite"
                    android:textSize="11sp"
                    tools:ignore="SmallSp" />

            </LinearLayout>
            <!--        android:text="@{@string/txt_validity+' 300' + @string/txt_days}"-->

        </androidx.cardview.widget.CardView>
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buyNow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="-26dp"
        android:background="@drawable/button_bg_with_stroke_10"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="20dp"
        android:paddingBottom="10dp"
        android:text="@string/btn_buy_now"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="21sp" />


</LinearLayout>