<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.CourseDescriptionVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="15dp"
        android:paddingEnd="25dp"
        tools:context=".view.fragment.CourseDescriptionFragment">


        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:textColor="@color/colorText"
            android:textStyle="bold"
            app:autoSizeMaxTextSize="18sp"
            app:autoSizeMinTextSize="13sp"
            app:autoSizeTextType="uniform"
            tools:text="@string/txt_diploma_in_agriculture" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:contentDescription="@string/hint_image"
                android:src="@drawable/calendar" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="25dp"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="6dp"
                android:gravity="center"
                android:text="@string/txt_validity_24_months"
                android:textColor="@color/colorPrimary"
                android:textSize="11sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorDarkGrey"
            android:textSize="11sp"
            android:layout_marginTop="10dp"
            tools:text="@string/text_dummy_text" />


    </LinearLayout>
</layout>