<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.LoginVM" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingStart="25dp"
            android:paddingTop="30dp"
            android:paddingEnd="25dp"
            android:paddingBottom="20dp"
            tools:context=".view.fragment.LoginFragment">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:text="@string/txt_please_login"
                android:textColor="@color/colourDarkBlue"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:maxLines="2"
                android:text="@string/txt_enter_your_drona_study"
                android:textColor="@color/colorEditTextHint"
                android:textSize="13sp" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/iet_mail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="25dp"
                android:background="@drawable/bg_edit_10dp"
                android:drawableStart="@drawable/ic_mail_s"
                android:drawableEnd="@drawable/tick"
                android:drawablePadding="10dp"
                android:hint="@string/txt_enter_your_email_here"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                android:padding="13dp"
                android:text="@={viewModel.userId}"
                android:textColor="@color/colorText"
                android:textColorHint="@color/colorEditTextHint"
                android:textSize="13sp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_edit_10dp"
                android:imeOptions="actionNext"
                android:padding="13dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center_vertical"
                    android:layout_marginEnd="10dp"
                    android:layout_toStartOf="@+id/eye"
                    android:background="@null"
                    android:drawableStart="@drawable/ic_password_s"
                    android:drawablePadding="10dp"
                    android:ellipsize="middle"
                    android:gravity="center_vertical"
                    android:hint="@string/txt_enter_password_here"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:text="@={viewModel.password}"
                    android:textColorHint="@color/colorEditTextHint"
                    android:textSize="13sp"
                    tools:ignore="UnusedAttribute" />

                <ImageView
                    android:id="@+id/eye"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:clickable="true"
                    android:contentDescription="@string/app_name"
                    android:focusable="true"
                    android:onClick="@{()->viewModel.visiblePassword()}"
                    android:scaleType="centerCrop"
                    android:src="@drawable/eye"
                    app:tint="@color/colorEditTextHint" />


            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginBottom="25dp"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="@{viewModel::forgotPassword}"
                android:text="@string/txt_forgot_password"
                android:textColor="@color/colorPrimary"
                android:textSize="13sp" />

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:background="@drawable/bg_button"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="@{viewModel::login}"
                android:padding="16sp"
                android:text="@string/txt_login"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackgroundBorderless"
                android:onClick="@{viewModel::register}"
                android:orientation="horizontal"
                android:padding="6dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:text="@string/txt_don_t_have_an_account"
                    android:textColor="@color/colorText"
                    android:textSize="13sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/txt_register"
                    android:textColor="@color/colorRed"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</layout>