<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.AppGuideVM" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="25dp"
        android:paddingBottom="10dp"
        tools:context=".view.fragment.AppGuidFragment">

        <LinearLayout
            android:id="@+id/dashBoardIma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/startLearningBtn"
            android:layout_alignParentTop="true"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/txt_courses"
                android:textColor="@color/colourDarkBlue"
                android:textSize="24sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="20sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/txt_learn_anywhere_and_anytime"
                android:textColor="@color/colorDarkGrey"
                android:textSize="24sp"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="21sp"
                app:autoSizeTextType="uniform" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:text="@string/anytime"
                android:textColor="@color/colorDarkGrey"
                android:textSize="24sp"
                android:textStyle="bold"
                app:autoSizeMaxTextSize="24sp"
                app:autoSizeMinTextSize="21sp"
                app:autoSizeTextType="uniform" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:contentDescription="@string/hint_image"
                android:scaleType="fitCenter"
                android:src="@drawable/onboard_screen_pride" />


        </LinearLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/startLearningBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/bg_button"
            android:foreground="?selectableItemBackgroundBorderless"
            android:onClick="@{viewModel::startLearningBtn}"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/txt_start_learning"
            android:textAllCaps="false"
            android:textColor="@color/colorWhite"
            android:textSize="18sp"
            android:textStyle="bold" />

    </RelativeLayout>
</layout>