<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.cmt.viewModel.fragment.ForgotPasswordVM" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="25dp"
        android:paddingTop="35dp"
        android:paddingEnd="25dp"
        android:paddingBottom="20dp"
        tools:context=".view.fragment.ForgotPasswordFragment">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:maxLines="2"
            android:text="@string/txt_enter_your_mobile_mail_to_recover"
            android:textColor="@color/colorEditTextHint"
            android:textSize="13sp" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/iet_mail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:background="@drawable/bg_edit_10dp"
            android:drawableStart="@drawable/ic_mail_s"
            android:drawablePadding="10dp"
            android:hint="@string/txt_enter_your_email_mobile_here"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:padding="13dp"
            android:text="@={viewModel.mobileNumber}"
            android:textColor="@color/colorText"
            android:textColorHint="@color/colorEditTextHint"
            android:textSize="13sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/loginBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="45dp"
            android:layout_marginTop="15dp"
            android:layout_marginEnd="45dp"
            android:background="@drawable/bg_edit_10dp"
            android:backgroundTint="@color/colorPrimary"
            android:foreground="?selectableItemBackgroundBorderless"
            android:onClick="@{viewModel::sendOtp}"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:text="@string/btn_submit"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="17sp"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
</layout>